base/services/vaultwarden/deployment.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: bitwarden
  labels:
    app: bitwarden
spec:
  selector:
    matchLabels:
      app: bitwarden
  serviceName: bitwarden
  template:
    metadata:
      labels:
        app: bitwarden
    spec:
      containers:
      - name: bitwarden
        image: vaultwarden/server
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        - containerPort: 3012
          name: websocket
          protocol: TCP
        # resources:
        #   requests:
        #     memory: "64Mi"
        #     cpu: "250m"
        #   limits:
        #     memory: "128Mi"
        #     cpu: "500m"
        volumeMounts:
        - name: vaultwarden
          mountPath: /data
      volumes:
        - name: vaultwarden
          persistentVolumeClaim:
            claimName: vaultwarden
