base/services/vaultwarden/ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: bitwarden-ingress-route
  labels:
    app: bitwarden
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`bitwarden.erpf.de`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: bitwarden
          port: 80
    - match: Host(`bitwarden.erpf.de`) && PathPrefix(`/notifications/hub`)
      kind: Rule
      services:
        - name: bitwarden
          port: 3012
  tls:
    secretName: bitwarden-erpf-de-tls
